sfSandBoxCode/force-app/main/default/objects/SweetSense_Sanergy_Int__c/SweetSense_Sanergy_Int__c.object-meta.xml
<CustomObject>
    <label>SweetSense Sanergy Int</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>SweetSenseSanergy Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SweetSenseSanergy</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>