sfSandBoxCode/force-app/main/default/objects/SweetSense_Sanergy_Int__c/fields/Card_Id__c.field-meta.xml
<CustomField>
    <fullName>Card_Id__c</fullName>
    <label>Card Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>