sfSandBoxCode/force-app/main/default/objects/SweetSense_Sanergy_Int__c/fields/Card_Type__c.field-meta.xml
<CustomField>
    <fullName>Card_Type__c</fullName>
    <label>Card Type</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>