sfSandBoxCode/force-app/main/default/objects/SweetSense_Sanergy_Int__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Comments</label>
    <length>100</length>
    <type>Text</type>
</CustomField>