sfSandBoxCode/force-app/main/default/objects/SweetSense_Sanergy_Int__c/fields/Converted_to_Case__c.field-meta.xml
<CustomField>
    <fullName>Converted_to_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when converted to case and vise versa</description>
    <label>Converted to Case</label>
    <type>Checkbox</type>
</CustomField>