sfSandBoxCode/force-app/main/default/objects/SweetSense_Sanergy_Int__c/fields/Fill_Level__c.field-meta.xml
<CustomField>
    <fullName>Fill_Level__c</fullName>
    <label>Fill Level</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>