sfSandBoxCode/force-app/main/default/objects/SweetSense_Sanergy_Int__c/fields/timeStamp__c.field-meta.xml
<CustomField>
    <fullName>timeStamp__c</fullName>
    <label>Timestamp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>