sfSandBoxCode/force-app/main/default/objects/SweetSense_Sanergy_Int__c/fields/Toilet_Id__c.field-meta.xml
<CustomField>
    <fullName>Toilet_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Toilet Id</label>
    <referenceTo>Toilet__c</referenceTo>
    <relationshipLabel>SweetSenseSanergy</relationshipLabel>
    <relationshipName>SweetSenseSanergy</relationshipName>
    <type>Lookup</type>
</CustomField>