sfSandBoxCode/force-app/main/default/objects/SweetSense_Sanergy_Int__c/fields/Trigger_Type__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Type__c</fullName>
    <label>Trigger Type</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>