sfSandBoxCode/force-app/main/default/objects/SweetSense_Sanergy_Int__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Toilet_Id__c</columns>
    <columns>Trigger_Type__c</columns>
    <columns>Card_Id__c</columns>
    <columns>Fill_Level__c</columns>
    <columns>Status__c</columns>
    <columns>Time__c</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>